<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="openBasic"
                android:text="@string/sample_title_basic" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="openBaseObj"
                android:text="@string/sample_title_baseobsvbo" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="openObservableFields"
                android:text="@string/sample_title_observablefields" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="openObservableCollections"
                android:text="@string/sample_title_observablecollections" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="openListViewActivity"
                android:text="@string/sample_title_listview" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="openRecyclerViewActivity"
                android:text="@string/sample_title_recyclerView" />

            <Button
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content"
                android:onClick="openLoginActivity"
                android:text="@string/sample_title_login" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>